# archan

./: .bumpversion.cfg  .cookiecutterrc  .copier-answers.yml  .coveragerc  .example_archan_config.yml  .gitignore  .landscape.yml  .prospector.yaml  .prospector.yml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  duties.py  index.html  mkdocs.yml  network.csv  objects.inv  pyproject.toml  runtests.py  setup.cfg  setup.py  sitemap.xml  tasks.py  tests.sh  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
archan/: __init__.py  archan.py  checker.py  criterion.py  dsm.py  errors.py  test_archan.py  tests.py
archan/criteria/: complete_mediation.txt  layered_architecture.txt  least_common_mechanism.txt  least_privileges.txt
changelog/: index.html
code_of_conduct/: index.html
config/: archan.yml  archan_examples.yml  coverage.ini  flake8.ini  mypy.ini  ruff.toml
contributing/: index.html
coverage/: index.html
credits/: index.html
docs/: Makefile  conf.py  configuration.rst  credits.md  extra.css  index.rst  installation.rst  reference.rst  roadmap.md  roadmap.rst  spelling_wordlist.txt  usage.rst
docs/reference/: analysis.md  cli.md  config.md  dsm.md  enums.md  errors.md  logging.md  printing.md
docs/reference/plugins/: checkers.md  providers.md
license/: index.html
reference/SUMMARY/: index.html
reference/archan/: index.html
reference/archan/analysis/: index.html
reference/archan/cli/: index.html
reference/archan/config/: index.html
reference/archan/debug/: index.html
reference/archan/dsm/: index.html
reference/archan/enums/: index.html
reference/archan/errors/: index.html
reference/archan/logging/: index.html
reference/archan/plugins/: index.html
reference/archan/plugins/checkers/: index.html
reference/archan/plugins/providers/: index.html
reference/archan/printing/: index.html
roadmap/: index.html
search/: search_index.json
src/archan/: __init__.py  __main__.py  analysis.py  analyzers.py  checker.py  checkers.py  cli.py  config.py  criterion.py  debug.py  dsm.py  enums.py  errors.py  logging.py  printing.py  providers.py  utils.py
src/archan/criteria/: code_clean.txt  economy_of_mechanism.txt  open_design.txt  separation_of_privileges.txt
src/archan/plugins/: __init__.py  checkers.py  printing.py  providers.py
tests/: __init__.py  test_archan.py  test_cli.py
