[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "archan"
version = "0.3.0"
description = "Analysis of your architecture strength based on DSM data."
authors = ["Timothée Mazzucotelli <pawamoy@pm.me>"]
license = "ISC License"
readme = "README.md"
repository = "https://github.com/pawamoy/archan"
homepage = "https://github.com/pawamoy/archan"
keywords = ["archan", "architecture", "analysis", "security", "dsm", "audit"]
packages = [ { include = "archan", from = "src" } ]
classifiers = [
    # http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.3"
pyyaml = "^5.3.1"
"tap.py" = "^3.0"

dependenpy = {version = "^3.3.0", optional = true}

[tool.poetry.extras]
dependenpy = ["dependenpy"]

[tool.poetry.dev-dependencies]
# formatting, quality, tests
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"

# tasks
duty = "^0.6.0"
git-changelog = "^0.4.2"
httpx = "^0.16.1"
jinja2-cli = "^0.7.0"
toml = "^0.10.2"

# flake8 plugins
darglint = "^1.5.8"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-docstrings = "^1.5.0"
flake8-pytest-style = "^1.3.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-variables-names = "^0.0.4"
pep8-naming = "^0.11.1"
wps-light = "^0.15.2"

# docs
mkdocs = "^1.1.2"
mkdocs-coverage = "^0.2.1"
mkdocs-macros-plugin = "^0.5.0"
mkdocs-material = "^6.2.7"
mkdocstrings = "^0.15.0"

[tool.poetry.scripts]
archan = "archan.cli:main"

[tool.poetry.plugins.archan]
"archan.LayeredArchitecture" = "archan.plugins.checkers:LayeredArchitecture"
"archan.SeparationOfPrivileges" = "archan.plugins.checkers:SeparationOfPrivileges"
"archan.LeastPrivileges" = "archan.plugins.checkers:LeastPrivileges"
"archan.EconomyOfMechanism" = "archan.plugins.checkers:EconomyOfMechanism"
"archan.CodeClean" = "archan.plugins.checkers:CodeClean"
"archan.LeastCommonMechanism" = "archan.plugins.checkers:LeastCommonMechanism"
"archan.CompleteMediation" = "archan.plugins.checkers:CompleteMediation"
"archan.CSVInput" = "archan.plugins.providers:CSVInput"

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "archan"
include_trailing_comma = true
